--- a/trunk/de.r15ch13.wcf.data.message.bbcode.aiondatabase/package.xml
+++ b/trunk/de.r15ch13.wcf.data.message.bbcode.aiondatabase/package.xml
@@ -7,10 +7,10 @@
 		<standalone>0</standalone>
 		<plugin>com.woltlab.wcf.data.message.bbcode</plugin>
 		<isunique>1</isunique>
-		<version>1.0.2</version>
-		<!-- $y$1.0.2# -->
+		<version>1.0.2 pl 1</version>
+		<!-- $y$1.0.2pl1# -->
 		<packagedescription>Ein BBCode um Item- und Spelldaten von Aiondatabase.com anzeigen zulassen.</packagedescription>
-		<date>2009-10-14</date>
+		<date>2010-01-23</date>
 	</packageinformation>
 
 	<authorinformation>
