--- a/de.r15ch13.wcf.data.message.bbcode.wowhead/package.xml
+++ b/de.r15ch13.wcf.data.message.bbcode.wowhead/package.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE package SYSTEM "http://www.woltlab.com/DTDs/package.dtd">
-<package name="de.r15ch13.wcf.data.message.bbcode.wowhead">
+<package name="de.r15ch13.wcf.data.message.bbcode.wowhead" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com/XSD/package.xsd">
        <!-- $n$de.r15ch13.wcf.data.message.bbcode.wowhead# -->
 	<packageinformation>
-		<packagename>Wowhead BBCode</packagename>
+		<packagename><![CDATA[Wowhead BBCode]]></packagename>
 		<standalone>0</standalone>
 		<plugin>com.woltlab.wcf.data.message.bbcode</plugin>
 		<isunique>1</isunique>
 		<version>1.0.2</version>
 		<!-- $v$1.0.2# -->
-        <packagedescription>Ein BBCode um WoW-Itemdaten von wowhead.com anzeigen zulassen.</packagedescription>
+        <packagedescription><![CDATA[Ein BBCode um WoW-Itemdaten von wowhead.com anzeigen zulassen.]]></packagedescription>
 		<date>2010-05-30</date>
 	</packageinformation>
 
 	<authorinformation>
-		<author>r15ch13</author>
-		<authorurl>http://www.argon-prime.eu</authorurl>
+		<author><![CDATA[r15ch13]]></author>
+		<authorurl><![CDATA[http://r15ch13.de]]></authorurl>
 	</authorinformation>
-	
+
 	<requiredpackages>
 		<requiredpackage minversion="1.0.0">com.woltlab.wcf.data.message.bbcode</requiredpackage>
-	</requiredpackages>	
+	</requiredpackages>
 
 	<instructions type="install">
 		<files>files.tar</files>
